paperless-ngx/paperless-ngx-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: document-management
