paperless-ngx/paperless-ngx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: document-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/component: document-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/component: document-management
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:3.2.1
          ports:
            - name: web
              containerPort: 8000
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 384Mi
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: data
              subPath: media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx
