paperless-ngx/tika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: tika
    app.kubernetes.io/component: document-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika
      app.kubernetes.io/component: document-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tika
        app.kubernetes.io/component: document-management
    spec:
      containers:
        - name: tika
          image: apache/tika:3.3.1.0
          ports:
            - containerPort: 9998
          resources:
            limits:
              cpu: 1000m
              memory: 768Mi
            requests:
              cpu: 50m
              memory: 256Mi
