paperless-ngx/paperless-ngx-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.albinmedoc.se`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
